--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,105 @@
-version: '2'
-services:
-  app:
-    build:
-    ports:
-      - '8069:8069'
-    volumes:
-      - 'data:/data'
-    environment:
+version: "2"
 
-volumes:
-  data:
+services:
+    alfresco:
+        image: alfresco/alfresco-content-repository-community:6.2.1-A8
+        mem_limit: 1500m
+        environment:
+            JAVA_OPTS: "
+                -Ddb.driver=org.postgresql.Driver
+                -Ddb.username=alfresco
+                -Ddb.password=alfresco
+                -Ddb.url=jdbc:postgresql://postgres:5432/alfresco
+                -Dsolr.host=solr6
+                -Dsolr.port=8983
+                -Dsolr.secureComms=none
+                -Dsolr.base.url=/solr
+                -Dindex.subsystem.name=solr6
+                -Dshare.host=127.0.0.1
+                -Dshare.port=8080
+                -Dalfresco.host=localhost
+                -Dalfresco.port=8080
+                -Daos.baseUrlOverwrite=http://localhost:8080/alfresco/aos
+                -Dmessaging.broker.url=\"failover:(nio://activemq:61616)?timeout=3000&jms.useCompression=true\"
+                -Ddeployment.method=DOCKER_COMPOSE
+                -DlocalTransform.core-aio.url=http://transform-core-aio:8090/
+                -Dalfresco-pdf-renderer.url=http://transform-core-aio:8090/
+                -Djodconverter.url=http://transform-core-aio:8090/
+                -Dimg.url=http://transform-core-aio:8090/
+                -Dtika.url=http://transform-core-aio:8090/
+                -Dtransform.misc.url=http://transform-core-aio:8090/
+                -Dcsrf.filter.enabled=false
+                -Xms1500m -Xmx1500m
+                "
+
+    transform-core-aio:
+        image: alfresco/alfresco-transform-core-aio:2.3.5
+        mem_limit: 1536m
+        environment:
+            JAVA_OPTS: " -Xms256m -Xmx1536m"
+        ports:
+            - 8090:8090
+
+    share:
+        image: alfresco/alfresco-share:6.2.1
+        mem_limit: 1g
+        environment:
+            REPO_HOST: "alfresco"
+            REPO_PORT: "8080"
+            JAVA_OPTS: "
+                -Xms500m
+                -Xmx500m
+                -Dalfresco.host=localhost
+                -Dalfresco.port=8080
+                -Dalfresco.context=alfresco
+                -Dalfresco.protocol=http
+                "
+
+    postgres:
+        image: postgres:11.7
+        mem_limit: 512m
+        environment:
+            - POSTGRES_PASSWORD=alfresco
+            - POSTGRES_USER=alfresco
+            - POSTGRES_DB=alfresco
+        command: postgres -c max_connections=300 -c log_min_messages=LOG
+        ports:
+            - 5432:5432
+
+    solr6:
+        image: alfresco/alfresco-search-services:2.0.0
+        mem_limit: 2g
+        environment:
+            #Solr needs to know how to register itself with Alfresco
+            - SOLR_ALFRESCO_HOST=alfresco
+            - SOLR_ALFRESCO_PORT=8080
+            #Alfresco needs to know how to call solr
+            - SOLR_SOLR_HOST=solr6
+            - SOLR_SOLR_PORT=8983
+            #Create the default alfresco and archive cores
+            - SOLR_CREATE_ALFRESCO_DEFAULTS=alfresco,archive
+            #HTTP by default
+            - ALFRESCO_SECURE_COMMS=none
+            - "SOLR_JAVA_MEM=-Xms2g -Xmx2g"
+        ports:
+            - 8083:8983 #Browser port
+
+    activemq:
+        image: alfresco/alfresco-activemq:5.15.8
+        mem_limit: 1g
+        ports:
+            - 8161:8161 # Web Console
+            - 5672:5672 # AMQP
+            - 61616:61616 # OpenWire
+            - 61613:61613 # STOMP
+
+#    proxy:
+#        image: alfresco/acs-community-ngnix:1.0.0
+#        mem_limit: 128m
+#        depends_on:
+#            - alfresco
+#        ports:
+#            - 80:80
+#        links:
+#            - alfresco
+#            - share
